syntax = "proto3";

package pb;

option go_package = "github.com/jgoerz/go-kit-crud/pkg/client/pb";
	

service AddressBook {
  rpc CreateContact(ContactRequest) returns (ContactResponse) {}
  rpc ReadContact(ReadContactRequest) returns (ContactResponse) {}
  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse) {}
  rpc UpdateContact(ContactRequest) returns (ContactResponse) {}
  rpc DeleteContact(DeleteContactRequest) returns (ContactResponse) {}
}


message ContactRequest {
  int64 id = 1;
  int64 tenant_id = 2;
  string first_name = 3;
  string last_name = 4;
  bool active = 5;
  string address = 6;
  string some_secret = 7;
}

message ReadContactRequest {
  int64 id = 1;
}

message DeleteContactRequest {
  int64 id = 1;
}

message ListContactsRequest {
  int64 page_token = 1;
  int32 page_size = 2;
}

message ContactResponse {
  int64 id = 1;
  int64 tenant_id = 2;
  string first_name = 3;
  string last_name = 4;
  bool active = 5;
  string address = 6;
  string some_secret = 7;
  string created_at = 8;
  string updated_at = 9;
  string error = 10;
}

message ListContactsResponse {
  int64 next_page_token = 1;
  repeated ContactResponse contact_responses = 2;
}
